syntax = "proto3";

package events;

option go_package = "github.com/evgeniyfimushkin/event-planner/services/common/pkg/protos/gen/event;event";

// Request message for checking event availability and reserving a participant spot.
message CheckAndReserveRequest {
  uint32 event_id = 1;
}

// Enum with possible response statuses.
enum ReserveStatus {
  RESERVE_STATUS_UNSPECIFIED = 0;
  SUCCESS = 1;         
  EVENT_NOT_FOUND = 2; 
  EVENT_FULL = 3;      
  INTERNAL_ERROR = 4;  
}

// Response message containing the outcome of the reservation.
message CheckAndReserveResponse {
  ReserveStatus status = 1;
  string message = 2;
  uint32 current_participants = 3;
}

// EventService defines gRPC methods for working with events.
service EventService {
  // Check event availability and reserve a spot if available.
  rpc CheckAndReserve(CheckAndReserveRequest) returns (CheckAndReserveResponse);
}
